
  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Make every package that ships a binary managed by qtchooser depend on it.
  * Build the documentation shipped with this submodule as a build-indep task:
    - Add the necessary indep build dependencies:
      * qttools5-dev-tools to use qhelpgenerator.
      * libqt5sql5-sqlite to generate qch doc.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 23 May 2013 21:33:23 -0300

qttools-opensource-src (5.0.2-6) experimental; urgency=low

  [ Pino Toscano ]
  * Update symbols files.
  * Make qttools5-dev-tools recommend libqt5sql5-sqlite (for assistant).

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update symbols files with amd64 build. Three symbols dissapeared, but the
    code hasn't changed and their where amd64-only symbols, so it seems safe.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 18 May 2013 22:38:04 -0300

qttools-opensource-src (5.0.2-5) experimental; urgency=low

  [ Pino Toscano ]
  * Update symbols files.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 10 May 2013 15:54:35 -0300

qttools-opensource-src (5.0.2-4) experimental; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update symbols files for armhf, ia64 and ppc64.

  [ Timo Jyrinki ]
  * Fix wrong paths in pkgconfig

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 06 May 2013 15:54:42 -0300

qttools-opensource-src (5.0.2-3) experimental; urgency=low

  [ Dmitry Shachnev ]
  * Use correct (and canonical) Vcs fields.

  [ Pino Toscano ]
  * debian/control: remove unused ${misc:Pre-Depends} from qttools5-dev-tools.
  * debian/control: make qttools5-dev depend on qtbase5-dev.
  * Update symbols files.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update amd64 symbols.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 28 Apr 2013 23:41:12 -0300

qttools-opensource-src (5.0.2-2) experimental; urgency=low
