@@ -6,6 +6,7 @@ qttools-opensource-src (5.0.2-7) UNRELEASED; urgency=low
     - Add the necessary indep build dependencies:
       * qttools5-dev-tools to use qhelpgenerator.
       * libqt5sql5-sqlite to generate qch doc.
+    - Build and create packages for qch and HTML doc formats.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 23 May 2013 21:33:23 -0300
 
